# dofus-bot

./: .env.example  .gitignore  INSTALLER.bat  Lancer Debug.bat  Lancer Dofus Bot (Admin).bat  Lancer Dofus Bot.bat  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/knowledge/: dofus_2_64_rules.md  system_prompt_dofus.md
docs/: ARCHITECTURE.md  ARCHITECTURE_COMBAT.md  DEPLOYMENT.md  ML_PIPELINE.md  NOUVEAUX_MODULES_V0_8.md  NOUVEAUX_MODULES_V0_9.md  PRD.md  SECURITY.md  TESTING.md  UI_DESIGN.md
scripts/: create-shortcuts.ps1  enrich_playbooks.py  enrich_spells_roles.py  install.ps1  package.ps1  publish-release.ps1  run.ps1  train_yolo.py
src/: __init__.py  main.py
src/config/: __init__.py  default.yaml  settings.py  zones.example.yaml
src/handlers/: __init__.py  combat_runner.py  inventory_manager.py  job_runner.py  state_machine.py
src/models/: __init__.py  detection.py  enums.py  game_state.py  job.py  map.py
src/services/: __init__.py  auto_calibration.py  auto_rejoin_worker.py  auto_updater.py  chat_service.py  combat_decision_engine.py  combat_detector.py  combat_knowledge.py  combat_profiles.py  combat_rules.py  combat_runner_worker.py  combat_state_reader.py  combat_stats_tracker.py  debug_visualizer.py  dungeon_runner_worker.py  farm_worker.py  fm_ocr.py  fm_worker.py  hsv_calibrator.py  hsv_learner.py  human_input.py  llm_client.py  (+25 more)
tests/: bench_engine.py  conftest.py  test_auto_calibration.py  test_combat_decision_engine.py  test_combat_profiles.py  test_combat_rules.py  test_debug_visualizer.py  test_dungeon_runner.py  test_fm_ocr.py  test_human_input.py  test_inventory_manager.py  test_los_detector.py  test_movement_planner.py  test_pathfinding.py  test_persistence.py  test_phase_detector.py  test_pm_cell_detector.py  test_rule_generator.py  test_tesseract_installer.py  test_ui.py  test_vision.py
(+50 files in other folders)
